--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
 <app-header></app-header>
+<div class="row">
+    <app-sidebar-menu class="col-10 col-md-8 col-lg-4 col-xl-2"></app-sidebar-menu>
+</div>
