--- a/src/app/core/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/core/sidebar-menu/sidebar-menu.component.html
@@ -1,6 +1,10 @@
 <aside class="menu">
-    <ul class="menu__list">
-        <li class="menu__item">Input</li>
-        <li class="menu__item">Select</li>
-    </ul>
+    <nav>
+        <ul class="menu__list">
+            <li class="menu__item">
+                <a [routerLink]="['/input']">Input</a>
+            </li>
+            <li class="menu__item">Select</li>
+        </ul>
+    </nav>
 </aside>
