--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -10,6 +10,6 @@
     />
     <div *ngIf="control.touched && control.invalid" class="input__error d-flex">
         <img src="assets/svg/error.svg" alt="error" />
-        <span>{{error[0]}}</span>
-    </div>
+        <span>{{errors[0]}}</span>
+    </div>        
 </div>
