--- a/src/app/pages/input-page/input-page.component.html
+++ b/src/app/pages/input-page/input-page.component.html
@@ -2,5 +2,5 @@
     <app-input label="Simple Input" id="simple-input" [disabled]="false"></app-input>
     <app-input label="Disabled Input" id="disabled-input" [disabled]="true"></app-input>
     <app-input label="Input With Mask" id="mask-input" [mask]="'(00) 00000-0000'"></app-input>
-    <app-input label="Error Input" id="error-input" [error]="errors" [control]="control"></app-input>
+    <app-input label="Error Input" id="error-input" [errors]="errors" [control]="control"></app-input>
 </app-default-page>
