--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -5,12 +5,16 @@
     align-items: center;
     justify-content: space-evenly;
 
-    p {
+    a {
         color: $white;
         text-align: center;
         font-size: 2.5em;
         font-family: Arial, Helvetica, sans-serif;
         margin: 0;
+
+        &:hover {
+            text-decoration: none;
+        }
     }
 }
 
