--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,4 +1,4 @@
 <div class="header row d-flex justify-content-evenly m-0">
-    <app-hamburguer-button class="header__menu"></app-hamburguer-button>
-    <a [routerLink]="['/']">Component Lib</a>
+    <app-hamburger-button class="header__menu"></app-hamburger-button>
+    <a [routerLink]="['/']" (click)="closeMenu()">Component Lib</a>
 </div>
