--- a/src/app/core/header/hamburguer-button/hamburger-button.component.html
+++ b/src/app/core/header/hamburguer-button/hamburger-button.component.html
@@ -1,3 +1,3 @@
-<button class="menu">
+<button class="menu" (click)="emitClick()">
     <img src="/assets/svg/hamburger-menu.svg" alt="menu"/>
 </button>
