--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
                 <app-sidebar-menu></app-sidebar-menu>
             </div>
         </div>
-        <div>
+        <div class="page__main">
             <router-outlet></router-outlet>
         </div>
     </div>
