Adjustments on 'code' text

--- a/src/app/pages/select-page/select-page.component.html
+++ b/src/app/pages/select-page/select-page.component.html
@@ -1,4 +1,4 @@
-<app-default-page [title]="'Select'">
+<app-default-page [title]="'Select'" [code]="code">
     <app-select
         [options]="options"
         [label]="'Select'"
