--- a/src/app/core/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/core/sidebar-menu/sidebar-menu.component.html
@@ -1,4 +1,7 @@
 <aside class="menu">
+    <div class="menu__header">
+        <h5 class="menu__title">Components</h5>
+    </div>
     <nav>
         <ul class="menu__list">
             <li class="menu__item" [routerLinkActive]="'menu__item--active'" *ngFor="let item of menuItems">
