--- a/src/app/core/sidebar-menu/sidebar-menu.component.scss
+++ b/src/app/core/sidebar-menu/sidebar-menu.component.scss
@@ -4,6 +4,15 @@
     height: 100%;
     background-color: $white;
 
+    &__header {
+        padding: 8px;
+    }
+
+    &__title {
+        color: $yellow;
+        font-weight: bold;
+    }
+
     &__list {
         padding-left: 0;
     }
@@ -11,11 +20,12 @@
     &__item {
        list-style-type: none;
        border-bottom: 1px solid $light-gray;
-       font-size: 30px;
+       font-size: 1.2rem;
        padding-left: 2px;
 
        .menu__link {
            display: block;
+           padding: 4px 8px;
        }
 
        &:hover {
