--- a/src/app/pages/default-page/default-page.component.scss
+++ b/src/app/pages/default-page/default-page.component.scss
@@ -21,14 +21,19 @@
         border: none;
         background-color: $white;
         display: flex;
+        margin-top: 8px;
         padding: 4px;
 
         &:hover {
-            background-color: $light-gray;
+            background-color: $dark-gray;
         }
     }
 }
 
 .hide {
     display: none;
+}
+
+.code {
+    background-color: $light-gray;
 }
