Move components to library

--- a/src/app/pages/select-page/select-page.component.html
+++ b/src/app/pages/select-page/select-page.component.html
@@ -1,10 +1,10 @@
 <app-default-page [title]="'Select'" [code]="code">
-    <app-select
+    <lib-select
         [options]="options"
         [label]="'Select'"
         [id]="'select'"
         [control]="control"
         [error]="error"
     >
-    </app-select>
+    </lib-select>
 </app-default-page>
