--- a/src/app/pages/button-page/button-page.component.html
+++ b/src/app/pages/button-page/button-page.component.html
@@ -1,3 +1,3 @@
 <app-default-page [title]="'Button'" [code]="code">
-    <app-button type="primary" [action]="showAlert"></app-button>
+    <lib-button type="primary" [action]="showAlert"></lib-button>
 </app-default-page>
