--- a/src/app/pages/input-page/input-page.component.html
+++ b/src/app/pages/input-page/input-page.component.html
@@ -1,10 +1,10 @@
 <app-default-page [title]="'Input'" [code]="code">
-    <app-input
+    <lib-input
         label="Input field"
         id="simple-input"
         [disabled]="false"
         [errors]="errors"
         [control]="control"
     >
-    </app-input>
+    </lib-input>
 </app-default-page>
