change colors to improve accessibility

--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -1,7 +1,7 @@
 @import "/src/assets/variables";
 
 .header {
-    background-color: $navy-blue;
+    background-color: $primary-color;
     align-items: center;
     justify-content: space-evenly;
 
