--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -1,7 +1,6 @@
 $white: #FFFFFF;
-$navy-blue: #024971;
-$dark-gray: #A6A6A6;
+$primary-color: #024971;
+$secondary-color: #B34C0C;
 $light-gray: #D9D9D9;
-$yellow: #CF9C3B;
 
 $mobile-width: 768px;
