sample form on home page

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,7 @@
 <div class="home">
     <h2 class="home__title">About the project</h2>
-    <p>This project is a component library, created to study the Storybook tool.</p>
-    <p>See the Storybook documentation <a href="https://storybook.js.org/">here</a>.</p>
+    <p>This project is a component library demo built with Angular and Storybook.</p>
+
+    <h3 class="home__title">Sample</h3>
+    <app-login-sample></app-login-sample>
 </div>
